// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> Should render correctly 1`] = `
<div>
  <button
    class="card"
    style="cursor: pointer;"
    type="button"
  >
    <div
      class="card__background"
    />
    <div
      class="card__outer-container card__outer-container--padded"
    />
    <div
      class="card__banner"
    />
  </button>
</div>
`;

exports[`<Card /> Should render correctly hrefExternal 1`] = `
<div>
  <a
    class="card"
    href="https://duckduckgo.com/"
  >
    <div
      class="card__background"
    />
    <div
      class="card__outer-container card__outer-container--padded"
    />
    <div
      class="card__banner"
    />
  </a>
</div>
`;

exports[`<Card /> Should render correctly with custom className 1`] = `
<div>
  <button
    class="card test-custom-classname"
    style="cursor: pointer;"
    type="button"
  >
    <div
      class="card__background"
    />
    <div
      class="card__outer-container card__outer-container--padded"
    />
    <div
      class="card__banner"
    />
  </button>
</div>
`;

exports[`<Card /> Should render with nextified href 1`] = `
<div>
  <button
    class="card"
    style="cursor: pointer;"
    type="button"
  >
    <div
      class="card__background"
    />
    <div
      class="card__outer-container card__outer-container--padded"
    />
    <div
      class="card__banner"
    />
  </button>
</div>
`;
